Added More Responsiveness

--- a/index.html
+++ b/index.html
@@ -607,9 +607,9 @@
 
   <!-- Footer -->
   <footer class="bg-white">
-    <div class="flex">
-      <div class="flex-auto w-[40%] my-14">
-        <div class="ml-[20%]">
+    <div class="lg:flex">
+      <div class="lg:flex-auto lg:w-[25%] w-[80%] lg:my-14 mx-auto lg:mx-0">
+        <div class="lg:ml-[20%] pt-10 lg:pt-0">
           <a href="#"><img src="images/logo.png" class="w-[8rem] h-auto mb-6"></a>
           <p class="text-[#8B939A] text-[0.8rem]">
             making this the first true generator on the Internet. It uses a dictionary of
@@ -619,27 +619,27 @@
           </p>
         </div>
       </div>
-      <div class="flex-auto w-[20%] my-14">
-        <div class="ml-[14rem]">
+      <div class="lg:flex-auto lg:w-[25%] lg:my-14 w-[80%] mx-auto lg:mx-0">
+        <div class="lg:ml-[14rem] pt-6 lg:pt-0">
           <p class="text-[#333333] text-[0.9rem] font-medium">Important Links</p>
-          <a href="#"><p class="text-[#8B939A] text-[0.8rem] mt-8">Home</p></a>
+          <a href="#"><p class="text-[#8B939A] text-[0.8rem] lg:mt-8 mt-3">Home</p></a>
           <a href="#"><p class="text-[#8B939A] text-[0.8rem] mt-2">Find Work</p></a>
           <a href="#"><p class="text-[#8B939A] text-[0.8rem] mt-2">Why Bube</p></a>
           <a href="#"><p class="text-[#8B939A] text-[0.8rem] mt-2">Enterprise</p></a>
           <a href="#"><p class="text-[#8B939A] text-[0.8rem] mt-2">Blog</p></a>
         </div>
       </div>
-      <div class="flex-auto w-[20%] my-14">
-        <div class="ml-[7rem]">
+      <div class="lg:flex-auto lg:w-[25%] lg:my-14 w-[80%] mx-auto lg:mx-0">
+        <div class="lg:ml-[7rem] pt-6 lg:pt-0">
           <p class="text-[#333333] text-[0.9rem] font-medium">Other Links</p>
-          <a href="#"><p class="text-[#8B939A] text-[0.8rem] mt-8">How It Works</p></a>
+          <a href="#"><p class="text-[#8B939A] text-[0.8rem] lg:mt-8 mt-3">How It Works</p></a>
           <a href="#"><p class="text-[#8B939A] text-[0.8rem] mt-2">FAQs</p></a>
           <a href="#"><p class="text-[#8B939A] text-[0.8rem] mt-2">Contact Us</p></a>
           <a href="#"><p class="text-[#8B939A] text-[0.8rem] mt-2">Terms and Conditions</p></a>
           <a href="#"><p class="text-[#8B939A] text-[0.8rem] mt-2">Privacy Policy</p></a>
         </div>
       </div>
-      <div class="flex-auto w-[20%] my-14">
+      <div class="lg:flex-auto lg:w-[25%] lg:my-14 w-[80%] mx-auto lg:mx-0 pt-6 lg:pt-0 pb-6 lg:pb-0">
         <p class="text-[#333333] text-[0.9rem] font-medium">Need Help?</p>
         <a href="#"><p class="text-[#8B939A] text-[0.8rem] mt-2"><i class="fa-regular fa-envelope text-[#0071BC] mr-2"></i>info@bube.com</p></a>
         <a href="#"><p class="text-[#8B939A] text-[0.8rem] mt-2 mb-4"><i class="fa-solid fa-phone-volume text-[#0071BC] mr-2"></i>(123) 456-7890</p></a>
