Finalized On Responsiveness

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
           <div class="bg-[#EDFAFE] w-[10rem] h-[10rem] m-auto text-center relative rounded-3xl rotate-45">
             <img src="images/fing_p2.png" class="w-[40%] m-0 absolute top-[50%] left-[50%] translate-y-[-50%] translate-x-[-50%]" alt="image">
           </div>
-          <div class="w-[24rem] h-[10rem] m-auto text-center relative mt-4 px-12">
+          <div class="h-[13rem] relative mt-4 px-8">
             <p class="text-[#050931] text-[1.3rem] pt-6 mb-2 font-medium">Easy To Use</p>
             <p class="text-[#8B939A] text-[1rem]">There are many variations of passages of Lorem Ipsum available</p>
           </div>
@@ -386,7 +386,7 @@
           <div class="bg-[#FFF8F5] w-[10rem] h-[10rem] m-auto text-center relative rounded-3xl rotate-45">
             <img src="images/search_icon.png" class="w-[40%] m-0 absolute top-[50%] left-[50%] translate-y-[-50%] translate-x-[-50%]" alt="image">
           </div>
-          <div class="w-[24rem] h-[10rem] m-auto text-center relative mt-4 px-12">
+          <div class="h-[13rem] relative mt-4 px-8">
             <p class="text-[#050931] text-[1.3rem] pt-6 mb-2 font-medium">Market Place Matching</p>
             <p class="text-[#8B939A] text-[1rem]">There are many variations of passages of Lorem Ipsum available</p>
           </div>
@@ -395,7 +395,7 @@
           <div class="bg-[#E4F4F1] w-[10rem] h-[10rem] m-auto text-center relative rounded-3xl rotate-45">
             <img src="images/verified.png" class="w-[40%] m-0 absolute top-[50%] left-[50%] translate-y-[-50%] translate-x-[-50%]" alt="image">
           </div>
-          <div class="w-[24rem] h-[10rem] m-auto text-center relative mt-4 px-12">
+          <div class="h-[13rem] relative mt-4 px-8">
             <p class="text-[#050931] text-[1.3rem] pt-6 mb-2 font-medium">Verified Artisans</p>
             <p class="text-[#8B939A] text-[1rem]">There are many variations of passages of Lorem Ipsum available</p>
           </div>
@@ -472,7 +472,7 @@
           <div class="bg-white w-[10rem] h-[10rem] m-auto text-center relative rounded-3xl">
             <img src="images/yellow_car.png" class="w-[40%] m-0 absolute top-[50%] left-[50%] translate-y-[-50%] translate-x-[-50%]" alt="image">
           </div>
-          <div class="w-[24rem] h-[10rem] m-auto text-center relative mt-4 px-12">
+          <div class="h-[13rem] relative mt-4 px-8">
             <p class="text-[#050931] text-[1.3rem] pt-6 mb-2 font-medium">Get A Ride</p>
             <p class="text-[#8B939A] text-[1rem]">There are many variations of passages of Lorem Ipsum available</p>
           </div>
@@ -481,7 +481,7 @@
           <div class="bg-white w-[10rem] h-[10rem] m-auto text-center relative rounded-3xl">
             <img src="images/price_tag.png" class="w-[40%] m-0 absolute top-[50%] left-[50%] translate-y-[-50%] translate-x-[-50%]" alt="image">
           </div>
-          <div class="w-[24rem] h-[10rem] m-auto text-center relative mt-4 px-12">
+          <div class="h-[13rem] relative mt-4 px-8">
             <p class="text-[#050931] text-[1.3rem] pt-6 mb-2 font-medium">The Best Price</p>
             <p class="text-[#8B939A] text-[1rem]">There are many variations of passages of Lorem Ipsum available</p>
           </div>
@@ -490,7 +490,7 @@
           <div class="bg-white w-[10rem] h-[10rem] m-auto text-center relative rounded-3xl">
             <img src="images/fing_p.png" class="w-[40%] m-0 absolute top-[50%] left-[50%] translate-y-[-50%] translate-x-[-50%]" alt="image">
           </div>
-          <div class="w-[24rem] h-[10rem] m-auto text-center relative mt-4 px-12">
+          <div class="h-[13rem] relative mt-4 px-8">
             <p class="text-[#050931] text-[1.3rem] pt-6 mb-2 font-medium">Easy To Use</p>
             <p class="text-[#8B939A] text-[1rem]">There are many variations of passages of Lorem Ipsum available</p>
           </div>
